Fixed issues on block and added small type checking